--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import './utils/variables';
 @import './layout/header';
 @import './layout/hero';
+@import './layout/view';
 @import url('https://fonts.googleapis.com/css?family=Jost:regular&display=swap');
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Display:regular&display=swap');
 
