--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,10 +3,13 @@
 @import './layout/header';
 @import './layout/hero';
 @import './layout/view';
+@import './layout/designs';
+@import './layout/what';
 @import url('https://fonts.googleapis.com/css?family=Jost:regular&display=swap');
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Display:regular&display=swap');
 
 @import './components/button';
+@import './components/title';
 
 
 body{
