--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,4 +1,4 @@
-.button{
+.button {
     display: flex;
     align-items: center;
     gap: 15px;
@@ -9,20 +9,24 @@
     position: relative;
     z-index: 0;
     top: 0;
-    &:hover{
+    @media(max-width:767.98px){
+        width: 100%;
+        justify-content: center;
+    }
+    &:hover {
         top: 3px;
         box-shadow: 0px 30px 60px 0px #292F36;
-        // background-color: #324760;
+        background-color: #324760;
     }
-    @media(max-width:479.98px){
+
+    @media(max-width:479.98px) {
         padding: 18px 20px 18px 28px;
     }
 }
 
-.button-text{
+.button-text {
     font-size: 18px;
-    line-height: 1.5; 
+    line-height: 1.5;
     letter-spacing: 0.72px;
     color: var(--secondary-color);
 }
-
