--- a/scss/style.css
+++ b/scss/style.css
@@ -64,6 +64,7 @@ body {
   --dark-color: #292F36;
   --brand-color: #CDA274;
   --secondary-color: #fff;
+  --light-color: #F4F0EC;
 }
 
 .header__container {
@@ -173,9 +174,22 @@ body {
   height: 100vh;
   width: 100vw;
 }
+@media (max-width: 991.98px) {
+  .hero {
+    border-radius: 0px 0px 0px 200px;
+  }
+}
+@media (max-width: 991.98px) {
+  .hero {
+    border-radius: 0px 0px 0px 100px;
+  }
+}
 .hero__container {
   padding-top: 188px;
   padding-bottom: 260px;
+}
+.hero__wrapper-content {
+  animation: view 2s 1 ease;
 }
 .hero__title {
   color: var(--dark-color);
@@ -219,6 +233,14 @@ body {
 @media (max-width: 991.98px) {
   .hero__text {
     margin-bottom: 25px;
+  }
+}
+@keyframes view {
+  0% {
+    transform: translateX(-1000px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
 .view__container {
@@ -283,6 +305,203 @@ body {
 .link-item-view:hover {
   transform: translateY(-10px);
 }
+.designs__container {
+  padding-bottom: 70px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  row-gap: 40px;
+  display: flex;
+}
+@media (max-width: 870.98px) {
+  .designs__container {
+    flex-direction: column;
+  }
+}
+@media (max-width: 767.98px) {
+  .designs__container {
+    padding-bottom: 40px;
+  }
+}
+.designs__content {
+  flex: 0 1 50%;
+}
+.designs__image {
+  flex: 0 1 50%;
+}
+
+.content-designs__title {
+  margin-bottom: 42px;
+}
+@media (min-width: 1199.98px) {
+  .content-designs__title {
+    padding-top: 40px;
+  }
+}
+@media (min-width: 991.98px) {
+  .content-designs__title {
+    max-width: 450px;
+  }
+}
+@media (max-width: 991.98px) {
+  .content-designs__title {
+    margin-bottom: 30px;
+  }
+}
+.content-designs__text {
+  margin-bottom: 40px;
+}
+@media (max-width: 991.98px) {
+  .content-designs__text {
+    margin-bottom: 30px;
+  }
+}
+.content-designs__text > p {
+  line-height: 1.5;
+  letter-spacing: 0.22px;
+}
+@media (min-width: 991.98px) {
+  .content-designs__text {
+    max-width: 510px;
+  }
+}
+.calls-content-designs {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 50px;
+  align-items: center;
+}
+@media (max-width: 991.98px) {
+  .calls-content-designs {
+    margin-bottom: 30px;
+  }
+}
+.calls-content-designs__img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #F4F0EC;
+  width: 93px;
+  height: 93px;
+}
+@media (max-width: 991.98px) {
+  .calls-content-designs__img {
+    width: 80px;
+    height: 80px;
+  }
+}
+.calls-content-designs__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.calls-content-designs__number {
+  display: block;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.22px;
+}
+.calls-content-designs__number:hover {
+  text-decoration: underline;
+  text-decoration-color: var(--brand-color);
+  text-underline-offset: 5px;
+}
+.calls-content-designs__text {
+  line-height: 1.5;
+  letter-spacing: 0.22px;
+}
+
+.image-designs__image {
+  position: relative;
+  padding-bottom: 107.263514%;
+  /* 635/592 */
+  overflow: hidden;
+  border-radius: 0px 326px 0px 123px;
+}
+@media (max-width: 479.98px) {
+  .image-designs__image {
+    border-radius: 0px 200px 0px 100px;
+  }
+}
+
+.image-designs__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.what__container {
+  border-radius: 70px;
+  background: var(--light-color);
+  padding: 104px 52px;
+}
+@media (max-width: 991.98px) {
+  .what__container {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+}
+@media (max-width: 991.98px) {
+  .what__container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+.what__title {
+  margin: 0px auto 48px auto;
+  max-width: 479px;
+}
+.what__list {
+  display: grid;
+  justify-content: center;
+  -moz-column-gap: 18px;
+       column-gap: 18px;
+  row-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(auto, 354px));
+}
+.what__item {
+  background-color: var(--secondary-color);
+  border-radius: 30px;
+  padding: 50px 32px;
+}
+@media (max-width: 767.98px) {
+  .what__item {
+    padding: 40px 22px;
+    border-radius: 26px;
+  }
+}
+
+.item-what__user {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 25px;
+}
+.item-what__text > p {
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.22px;
+}
+
+.user-what__image {
+  border-radius: 50%;
+}
+.user-what__name {
+  color: var(--dark-color);
+  font-family: "DM Serif Display";
+  font-size: 25px;
+  line-height: 1.48;
+  letter-spacing: 0.22px;
+}
+.user-what__city {
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.22px;
+}
+
 .button {
   display: flex;
   align-items: center;
@@ -295,9 +514,16 @@ body {
   z-index: 0;
   top: 0;
 }
+@media (max-width: 767.98px) {
+  .button {
+    width: 100%;
+    justify-content: center;
+  }
+}
 .button:hover {
   top: 3px;
   box-shadow: 0px 30px 60px 0px #292F36;
+  background-color: #324760;
 }
 @media (max-width: 479.98px) {
   .button {
@@ -310,6 +536,23 @@ body {
   line-height: 1.5;
   letter-spacing: 0.72px;
   color: var(--secondary-color);
+}
+
+.title {
+  color: var(--dark-color);
+  font-family: "DM Serif Display";
+  font-size: 45px;
+  line-height: 1.2;
+  letter-spacing: 0.22px;
+}
+@media (max-width: 991.98px) {
+  .title {
+    font-size: 38px;
+  }
+}
+
+.title--center {
+  text-align: center;
 }
 
 body {
