--- a/scss/layout/_designs.scss
+++ b/scss/layout/_designs.scss
@@ -1,7 +1,7 @@
 .designs {
 
     &__container {
-        padding-bottom: 70px;
+        padding-bottom: 140px;
         column-gap: 20px;
         row-gap: 40px;
         display: flex;
@@ -9,7 +9,12 @@
         @media(max-width:870.98px) {
             flex-direction: column;
         }
-        @media(max-width:767.98px){
+
+        @media(max-width:991.98px) {
+            padding-bottom: 70px;
+        }
+
+        @media(max-width:767.98px) {
             padding-bottom: 40px;
         }
     }
@@ -46,6 +51,7 @@
 
     &__text {
         margin-bottom: 40px;
+
         @media(max-width:991.98px) {
             margin-bottom: 30px;
         }
@@ -104,7 +110,8 @@
         font-size: 24px;
         line-height: 1.5;
         letter-spacing: 0.22px;
-        &:hover{
+
+        &:hover {
             text-decoration: underline;
             text-decoration-color: var(--brand-color);
             text-underline-offset: 5px;
@@ -144,7 +151,8 @@
     /* 635/592 */
     overflow: hidden;
     border-radius: 0px 326px 0px 123px;
-    @media(max-width:479.98px){
+
+    @media(max-width:479.98px) {
         border-radius: 0px 200px 0px 100px;
     }
 }
