--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import './layout/view';
 @import './layout/designs';
 @import './layout/what';
+@import './layout/brand';
 @import url('https://fonts.googleapis.com/css?family=Jost:regular&display=swap');
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Display:regular&display=swap');
 
