--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import './layout/designs';
 @import './layout/what';
 @import './layout/brand';
+@import './layout/projects';
 @import url('https://fonts.googleapis.com/css?family=Jost:regular&display=swap');
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Display:regular&display=swap');
 
@@ -13,10 +14,12 @@
 @import './components/title';
 
 
-body{
+body {
     font-family: "Jost";
     font-size: 22px;
     color: var(--primary--color);
+    line-height: 1.5;
+    letter-spacing: 0.22px;
 }
 
 
@@ -38,7 +41,3 @@ body{
     padding-right: 15px;
     margin: 0 auto;
 }
-
-
-
-
