--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -9,10 +9,12 @@
     position: relative;
     z-index: 0;
     top: 0;
-    @media(max-width:767.98px){
+
+    @media(max-width:479.98px) {
         width: 100%;
         justify-content: center;
     }
+
     &:hover {
         top: 3px;
         box-shadow: 0px 30px 60px 0px #292F36;
@@ -29,4 +31,14 @@
     line-height: 1.5;
     letter-spacing: 0.72px;
     color: var(--secondary-color);
+}
+
+.button--light {
+    background-color: var(--brand-color);
+
+    &:hover {
+        top: 3px;
+        box-shadow: 0px 30px 60px 0px #e29e56;
+        background-color: #aa763d;
+    }
 }
