--- a/scss/style.css
+++ b/scss/style.css
@@ -241,7 +241,7 @@ body {
     border-radius: 0px 0px 0px 200px;
   }
 }
-@media (max-width: 991.98px) {
+@media (max-width: 767.98px) {
   .hero {
     border-radius: 0px 0px 0px 100px;
   }
@@ -249,6 +249,12 @@ body {
 .hero__container {
   padding-top: 188px;
   padding-bottom: 260px;
+}
+@media (max-width: 991.98px) {
+  .hero__container {
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
 }
 .hero__wrapper-content {
   animation: view 2s 1 ease;
