--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,11 +1,13 @@
 .hero {
     background: url(img/hero/main.jpg) no-repeat center top / cover;
     border-radius: 0px 0px 0px 290px;
+   @media(min-width:991.98px){
     height: 100vh;
     width: 100vw;
+   }
 
     @media(max-width:991.98px) {
-        border-radius: 0px 0px 0px 200px;
+        border-radius: 0px 0px 0px 150px;
     }
 
     @media(max-width:767.98px) {
