--- a/scss/style.css
+++ b/scss/style.css
@@ -233,12 +233,16 @@ body {
 .hero {
   background: url(img/hero/main.jpg) no-repeat center top/cover;
   border-radius: 0px 0px 0px 290px;
-  height: 100vh;
-  width: 100vw;
+}
+@media (min-width: 991.98px) {
+  .hero {
+    height: 100vh;
+    width: 100vw;
+  }
 }
 @media (max-width: 991.98px) {
   .hero {
-    border-radius: 0px 0px 0px 200px;
+    border-radius: 0px 0px 0px 150px;
   }
 }
 @media (max-width: 767.98px) {
