--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -51,6 +51,7 @@
         flex: 0 0 30px;
         height: 18px;
         position: relative;
+        z-index: 50;
     }
 
     .icon-menu span,
@@ -78,6 +79,7 @@
 
     .menu__body {
         position: fixed;
+        z-index: 4;
         top: 0;
         left: -100%;
         width: 100%;
@@ -85,8 +87,20 @@
         background-color: #e4d4c2;
         padding: 150px 30px 50px 30px;
         transition: left 0.3s ease 0s;
-        overflow: hidden;
+        overflow: auto;
     }
+    .menu__body::before{
+        content: '';
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 70px;
+        background-color: #e4d4c2;
+        transition: left 0.3s ease 0s;
+        overflow: auto;
+    }
+
     .menu-open .menu__body{
         left: 0;
     }
