--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,7 +9,7 @@
 
     &__logo {
         position: relative;
-        z-index: 5;
+        z-index: 50;
     }
 
     &__menu {}
@@ -132,6 +132,9 @@
     }
 }
 
+.scroll-off{
+    overflow: hidden;
+}
 // .menu__link{
 //     position: relative;
 //     transition: background-color 12s;
